# safebreach-mcp

./: .env.template  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .secrets.baseline  API.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  E2E_TESTING.md  MANIFEST.in  README.md  SECURITY_GUIDELINES.md  TEAM_WORKFLOW.md  claude-launcher.sh  conftest.py  mcp_server_bug_423_hotfix.py  mcp_server_manager.py  mcp_server_rest_api.py  pyproject.toml  requirements.txt  setup-security.sh  start_all_servers.py
.claude/commands/: mcp-create-release.md
.docs/.missions/: drift_analysis_phase2.md
.docs/missions/: add_drift_analysis.md
.github/: CODEOWNERS
.github/workflows/: release.yml  security-scan.yml
docs/: integration.md
prds/: SAF-28436.md  SAF-29865.md  SAF-32359.prd  mcp-semantics-quick-run-evaluate.md  saf-26595.md
prds/SAF-28298/: context.md  manual-tests.md  prd.md  summary.md
prds/SAF-28305/: context.md  (+3 more)
safebreach_mcp_config/: __init__.py  config_functions.py  config_server.py  config_types.py
safebreach_mcp_core/: __init__.py  cache_config.py  datetime_utils.py  environments_metadata.py  queue_state.py  rate_limiter.py  safebreach_auth.py  safebreach_base.py  safebreach_cache.py  secret_providers.py  secret_utils.py  suggestions.py  token_context.py  user_lookup.py
safebreach_mcp_data/: __init__.py  data_functions.py  data_server.py  data_types.py  drifts_metadata.py
safebreach_mcp_playbook/: __init__.py  playbook_functions.py  playbook_server.py  playbook_types.py
safebreach_mcp_studio/: __init__.py  studio_functions.py  studio_server.py  studio_templates.py  studio_types.py
safebreach_mcp_utilities/: __init__.py  utilities_server.py
scripts/: investigate_propagate_fields.py
tests/: README.md  memory_profile_baseline.py  monitor_process_memory.py  pytest.ini  run_auth_tests.py  test_auth_concurrency.py  test_concurrency_limiter.py  test_e2e_concurrency_limiter.py  test_environments_metadata.py  test_external_authentication.py  test_mcp_server_manager.py  test_rate_limiting_e2e.py
(+157 files in other folders)
